clusterprep.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-edgefs
