edgefs-nfs-csi-driver.yaml

kind: Service
apiVersion: v1
metadata:
  name: edgefs-nfs-csi-controller
  labels:
    app: edgefs-nfs-csi-controller
spec:
  selector:
    app: edgefs-nfs-csi-controller
  ports:
    - name: dummy
      port: 12345
---

kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: edgefs-nfs-csi-controller
spec:
  selector:
    matchLabels:
      app: edgefs-nfs-csi-controller
  serviceName: edgefs-nfs-csi-controller
  replicas: 1
  template:
    metadata:
      labels:
        app: edgefs-nfs-csi-controller
    spec:
      serviceAccount: edgefs-nfs-csi-controller-service-account
      containers:
        # csi-provisioner: sidecar container that watches Kubernetes PersistentVolumeClaim objects
        # and triggers CreateVolume/DeleteVolume against a CSI endpoint
        - name: csi-provisioner
          image: quay.io/k8scsi/csi-provisioner:v1.0.1
          imagePullPolicy: IfNotPresent
          args:
            - --connection-timeout=25s
            - --provisioner=io.edgefs.csi.nfs
            - --csi-address=/var/lib/csi/sockets/pluginproxy/csi.sock
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy
        # csi-attacher: sidecar container that watches Kubernetes VolumeAttachment objects
        # and triggers ControllerPublish/Unpublish against a CSI endpoint
        - name: csi-attacher
          image: quay.io/k8scsi/csi-attacher:v1.0.1
          imagePullPolicy: IfNotPresent
          args:
            - --v=3
            - --csi-address=/var/lib/csi/sockets/pluginproxy/csi.sock
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy
# Not implemented yet for NFS version of the driver
#        - name: csi-snapshotter
#          image: quay.io/k8scsi/csi-snapshotter:v1.0.1
#          imagePullPolicy: IfNotPresent
#          args:
#            - --connection-timeout=25s
#            - --csi-address=/var/lib/csi/sockets/pluginproxy/csi.sock
#          volumeMounts:
#            - name: socket-dir
#              mountPath: /var/lib/csi/sockets/pluginproxy
        - name: driver
          image: edgefs/edgefs-csi:latest
          imagePullPolicy: Always
          args:
            - --role=controller
            - --driverType=nfs          
            - --nodeid=$(KUBE_NODE_NAME)
            - --endpoint=unix://csi/csi.sock
            - --verbose=debug
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
            - name: secret
              mountPath: /config
              readOnly: true
      volumes:
        - name: socket-dir
          emptyDir:
        - name: secret
          secret:
            secretName: edgefs-nfs-csi-driver-config
---

# Edgefs Node Server as a daemon

kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: edgefs-nfs-csi-node
spec:
  selector:
    matchLabels:
      app: edgefs-nfs-csi-node
  template:
    metadata:
      labels:
        app: edgefs-nfs-csi-node
    spec:
      serviceAccount: edgefs-nfs-csi-node-service-account
      hostNetwork: true
      containers:
        # driver-registrar: sidecar container that:
        # 1) registers the CSI driver with kubelet
        # 2) adds the drivers custom NodeId to a label on the Kubernetes Node API Object
        - name: driver-registrar
          image: quay.io/k8scsi/csi-node-driver-registrar:v1.0.1
          imagePullPolicy: IfNotPresent
          args:
            - --v=3
            - --csi-address=/csi/csi.sock
            - --kubelet-registration-path=/var/lib/kubelet/plugins_registry/io.edgefs.csi.nfs/csi.sock
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
            - name: registration-dir
              mountPath: /registration
        - name: driver
          securityContext:
            privileged: true
            capabilities:
              add: ['SYS_ADMIN']
            allowPrivilegeEscalation: true
          image: edgefs/edgefs-csi:latest
          imagePullPolicy: Always
          args:
            - --role=node
            - --driverType=nfs          
            - --nodeid=$(KUBE_NODE_NAME)
            - --endpoint=unix://csi/csi.sock
            - --verbose=debug
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
            - name: secret
              mountPath: /config
            - name: pods-mount-dir
              mountPath: /var/lib/kubelet/pods
              mountPropagation: Bidirectional
            - name: host
              mountPath: /host
              mountPropagation: Bidirectional
      volumes:
        - name: socket-dir
          hostPath:
            path: /var/lib/kubelet/plugins_registry/io.edgefs.csi.nfs
            type: DirectoryOrCreate
        - name: registration-dir
          hostPath:
            path: /var/lib/kubelet/plugins_registry/
            type: Directory
        - name: pods-mount-dir
          hostPath:
            path: /var/lib/kubelet/pods
            type: Directory
        - name: host
          hostPath:
            path: /
            type: Directory
        - name: secret
          secret:
            secretName: edgefs-nfs-csi-driver-config
---
