vhost-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rook-ingress
  annotations:
    cert-manager.io/issuer: ca-issuer 
spec:
  rules:
  - host: rook.local
    http:
      paths:
      - backend:
          serviceName: rook-edgefs-ui
          servicePort: 3000
        path: /
  - host: mongo-express.local
    http:
      paths:
      - backend:
          serviceName: mongo-express
          servicePort: 8081
        path: /
  tls:
  - hosts:
    - mongo-express.local
    secretName: mongo-express-cert
  - hosts:
    - rook.local
    secretName: rook-cert
